EPS (and now also SVG) export changed to Batik (from epsgraphics), removing questionable dependency on GPL-licenced software